with mongo embeded
