# src/app/resources/customers/interactor.js
@@ -5,12 +5,12 @@ const entity = require('./entity')
 const interactor = {
   create: async customer => {
     const found = await entity.findBy({ document: customer.document })
-
     if (!_.isEmpty(found)) throw new ALREADY_CREATED(`Document ${customer.document} already created`)
 
     return entity.create(customer)
   },
-  find: async list => {
+
+  findAll: async list => {
     // for 0 or 1 + n ids, we're not throwing a not found error
     if (list.length !== 1) return entity.find(list)
 
@@ -19,6 +19,15 @@ const interactor = {
     if (!customer) throw new NOT_FOUND(`Customer '${list[0]}' not found`)
 
     return customer
+  },
+  findById: async id => {
+    const customer = await entity.findById(id)
+    if (!customer) throw new NOT_FOUND(`Customer '${id}' not found`)
+    return customer
+  },
+  updateById: async (id, customer) => {
+    const result = await entity.updateById(id, customer)
+    return result
   }
 
 }
