# src/app/resources/customers/translator-v1.js
@@ -1,3 +1,4 @@
+/* eslint-disable prefer-destructuring */
 const interactor = require('./interactor')
 const { customerSchema } = require('./customerSchema')
 
@@ -20,8 +21,11 @@ const translator = {
         error.status = 422
         res.status(error.status).json({ message: error.details[0].message })
       }
+
       if (error.status >= 500) {
         res.status(error.status).json({ message: 'internal server error' })
+      } else {
+        next(error)
       }
     }
   },
@@ -31,21 +35,17 @@ const translator = {
     // #swagger.description = 'Create a custumer'
     /* #swagger.parameters['id'] = {
                description: 'Customer id',
-               type: 'number',
-               required: true,
-               in: 'patch'
+               type: 'string',
+               required: true
         }
       */
     try {
-      const [, , ids] = req.path.split('/')
-      const list = ids?.split(',') ?? []
-      const customers = await interactor.find(list)
-
       /* #swagger.responses[200] = {
                schema: { $ref: "#/definitions/Customer" },
                description: 'Customer finding'
         }
       */
+      const customers = await interactor.findById(req.params.id)
       res.status(200).json(customers)
     } catch (error) {
       // #swagger.responses[500]
@@ -57,20 +57,49 @@ const translator = {
     // #swagger.tags = ['Customer']
     // #swagger.description = 'Create a custumer'
     try {
-      const [, , ids] = req.path.split('/')
-      const list = ids?.split(',') ?? []
-      const customers = await interactor.find(list)
       /* #swagger.responses[200] = {
               schema: {$ref:"#/definitions/CustomerList"},
                description: 'Return a Customer list'
         }
       */
+      const customers = await interactor.findAll()
       res.status(200).json(customers)
     } catch (error) {
       // #swagger.responses[500]
       next(error)
     }
+  },
+
+  updateById: async (req, res, next) => {
+    /*
+    #swagger.tags = ['Customer']
+    #swagger.description = 'Update Customer by id'
+    #swagger.parameters['id'] = {
+               description: 'Customer id',
+               type: 'string',
+               required: true
+        }
+    #swagger.parameters['Customer'] = {
+                in: 'body',
+                type: 'object',
+                schema: {$ref: "#/definitions/UpdateCustomer"}
+    }
+    #swagger.response[200] = {
+      schema: {$ref: "#definitions/UpdateCustomer"},
+      description: 'Return customer edited'
+    }
+    #swagger.responses[500]
+    */
+    try {
+      const id = req.params.id
+      const customer = req.body
+      const result = await interactor.updateById(id, customer)
+      res.status(200).json(result)
+    } catch (error) {
+      next(error)
+    }
   }
+
 }
 
 module.exports = { translator }
